revertir ventas - carlito

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1570,7 +1570,12 @@ input[disabled], select[disabled], textarea[disabled], input[readonly], select[r
   font-weight: 700;
   font-size: 13px;
   letter-spacing: 1px;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  background: #0f0c29;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
 
 .table > tbody > tr > td .usr-img-frame {
   background-color: #ebedf2;
