--- a/public/assets/css/authentication/form-1.css
+++ b/public/assets/css/authentication/form-1.css
@@ -25,7 +25,10 @@ body {
   width: 50%;
   display: flex;
   flex-direction: column;
-  min-height: 100%; }
+  min-height: 100%;
+  background-color: #3b3f5c;
+  background-image: linear-gradient(45deg, #3b3f5c 0%, #6b3eab 99%);
+}
   .form-form .form-form-wrap {
     max-width: 480px;
     margin: 0 auto;
